Build
------------------------------------------------------------------------------------------------------------------------



Build 2010112501
------------------------------------------------------------------------------------------------------------------------

Improvements
 - First version of threaded parsing
 - Removed 2mb file size limit and increased max allocated memory to allow for bigger files
 - Changed formatting of language syntax files as being edited in the bundle editor

Bugfixes
 - Keystroke incorrectly saved in bundle editor on windows
 - Fixed exception when closing all tabs at once
 - Fixed major bug with tab and enter when having multiple windows active
 - Fixed incorrect syntax highlighting in ruby. Problem by contentName and backreferences in the end pattern
 - Couldn't edit (save) not bundle item files in bundles



Build 2010111701
------------------------------------------------------------------------------------------------------------------------

Features

Improvements
 - Install bundles dialog now shows bundles sorted alphabetically
 - Removed non-breaking space in some of the bundle item names as this cannot be displayed properly on Windows

 
Bugfixes
 - HTTP delivery of files containing spaces
 - Edit with JSourcepad
 - File Association dialog registers bat if launched with bat file and exe if launched with exe file
 - Fixed problem where snippet expansion sometimes didn't work


Build 2010111001
------------------------------------------------------------------------------------------------------------------------

Features
 - Bundle Installer can download bundles using HTTP

Improvements
 - Big performance improvement on launching commands by avoiding login shell by caching environment
 - Command bundles now support all output and input methods supported in TextMate
 - Focus on window when opening from external app

Bugfixes
 - Select Current Scope didn't work with cross line scopes